kubernetes/apps/observability/blackbox-exporter/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blackbox-exporter
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: "Blackbox Exporter"
    hajimari.io/icon: mdi:solid
    hajimari.io/group: "observability"
    hajimari.io/instance: "admin"
spec:
  hostnames: ["blackbox.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: blackbox-exporter
          namespace: observability
          port: 9115
